@@ -44,6 +44,10 @@ Changes from 0.7-0 to 0.8-0
     can apply EITHER to the individual child elements (the default)
     OR to the parent <g>.
 
+13. Added vignette on extending the 'gridSVG' package.
+
+    vignette("extensibility")
+
 
 Changes from 0.6-0 to 0.7-0
 ===========================
